# CubeReadWriteFile

./: .gitignore  CMakeLists.txt  README.md  shaders.qrc
resources/: fshader.glsl  vshader.glsl
src/: fileworker.cpp  fileworker.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
